--- a/index-geophysics.html
+++ b/index-geophysics.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Halcyonic | HTML5 UP</title>
+		<title>부경대학교 지구물리연구실</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -21,15 +21,16 @@
 							<div class="col-12">
 
 								<!-- Logo -->
-									<h1><a href="index.html" id="logo">Halcyonic</a></h1>
+									<h1><a href="index.html" id="logo">geophysics@pknu</a></h1>
 
 								<!-- Nav -->
 									<nav id="nav">
-										<a href="index.html">Home</a>
-										<a href="threecolumn.html">Three Column</a>
-										<a href="twocolumn1.html">Two Column #1</a>
-										<a href="twocolumn2.html">Two Column #2</a>
-										<a href="onecolumn.html">One Column</a>
+										<a href="index.html">처음...</a>
+										<!-- <a href="threecolumn.html">사람</a> -->
+                                        <a href="People.html">사람</a>
+										<a href="twocolumn1.html">연구</a>
+										<a href="twocolumn2.html">교육</a>
+										<a href="onecolumn.html">활동</a>
 									</nav>
 
 							</div>
@@ -41,14 +42,15 @@
 								<div class="col-6 col-12-medium">
 
 									<!-- Banner Copy -->
-										<p>We do something really useful, important, and unique. Learn all about it here ...</p>
-										<a href="#" class="button-large">Go on, click me!</a>
+										<p>Welcome to Geophysics Lab of Pukyong National University.<br> We are studying Seismology and Geophysics.</p>
+										<a href="#" class="button-large">geophysics@pknu!</a>
 
 								</div>
 								<div class="col-6 col-12-medium imp-medium">
 
 									<!-- Banner Image -->
-										<a href="#" class="bordered-feature-image"><img src="images/banner.jpg" alt="" /></a>
+										<!-- <a href="#" class="bordered-feature-image"><img src="images/banner.jpg" alt="" /></a> -->
+                                        <a href="#" class="bordered-feature-image"><img src="images/seismicity.jpeg" alt="" /></a>
 
 								</div>
 							</div>
@@ -64,7 +66,8 @@
 
 								<!-- Feature #1 -->
 									<section>
-										<a href="#" class="bordered-feature-image"><img src="images/pic01.jpg" alt="" /></a>
+                                        <!-- <a href="#" class="bordered-feature-image"><img src="images/pic01.jpg" alt="" /></a> -->
+                                        <a href="#" class="bordered-feature-image"><img src="images/Baekdu05.jpg" alt="" /></a>
 										<h2>Welcome to Halcyonic</h2>
 										<p>
 											This is <strong>Halcyonic</strong>, a free site template
