Commit correction on home redirection in people.html

--- a/People.html
+++ b/People.html
@@ -25,11 +25,11 @@
 
 								<!-- Nav -->
 									<nav id="nav">
-										<a href="index-geophysics.html">Home</a>
-										<a href="People.html">People</a>
-										<a href="Education.html">Education</a>
-										<a href="Research.html">Research</a>
-										<a href="Activity.html">Activity</a>
+                                        <a href="index.html">Home</a>
+                                        <a href="People.html">People</a>
+                                        <a href="Education.html">Education</a>
+                                        <a href="Research.html">Research</a>
+                                        <a href="Activity.html">Activity</a>
 									</nav>
 
 							</div>
