Commit publication and people
Changed color of '#content a' in main.css

--- a/Research.html
+++ b/Research.html
@@ -56,7 +56,7 @@
 											<li><a href="#">Seismic hazard</a></li>
 										</ul>
                                         <header>
-                                            <h3><a href="#">Publication</a></h3>
+                                            <h3><a href="Publication.html">Publication</a></h3>
                                         </header>
 									</section>
 									<section>
