--- a/Education.html
+++ b/Education.html
@@ -50,12 +50,7 @@
 											<h3>that <span style="color: #004d65;">geophysics@pknu</span> is giving</h3>
 										</header>
 										<p>
-											Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam metus, congue
-											vel suscipit ut, dignissim non risus. Vestibulum ante est, fringilla nec placerat
-											eu, vestibulum vitae diam. Integer eget egestas eros. Duis enim erat, mollis quis
-											lacinia eget, blandit nec ipsum. Donec vitae turpis ipsum. Aliquam mauris libero,
-											sagittis in eleifend at, mattis imperdiet velit. Donec urna risus, rutrum molestie
-											varius ac, lacinia sit amet augue. Nam ultrices elementum eros.
+											Do what you want, not your surroundings does. 
 										</p>
 										<p>
 											Sed faucibus viverra ligula, non varius magna semper vitae. Donec eu justo ut ipsum
