Commit to many changes

--- a/index.html
+++ b/index.html
@@ -41,8 +41,10 @@
 								<div class="col-6 col-12-medium">
 
 									<!-- Banner Copy -->
-										<p>Welcome to Geophysics Lab of Pukyong National University.<br> We are studying Seismology and Geophysics.</p>
-										<a href="#" class="button-large">geophysics@pknu!</a>
+										<!--<p>Welcome to Seismology & Geophysics Lab</p>-->
+										<!--<a href="#" class="button-large">geophysics@pknu!</a>-->
+                                        <a href="#" class="button-large">Welcome to Seismology & Geophysics Lab</a>
+                                            <p>Welcome to the Seismology & Geophysics Laboratory at the <a href="http://cms.pknu.ac.kr/earth">Department of Earth and Environmental Sciences</a> of the <a href="http://www.pknu.ac.kr">Pukyong National University</a> (PKNU).</p>
 
 								</div>
 								<div class="col-6 col-12-medium imp-medium">
@@ -66,8 +68,8 @@
 								<!-- Feature #1 -->
 									<section>
                                         <!-- <a href="#" class="bordered-feature-image"><img src="images/pic01.jpg" alt="" /></a> -->
-                                        <a href="#" class="bordered-feature-image"><img src="images/Baekdu05.jpg" alt="" /></a>
-										<h2>Welcome to Halcyonic</h2>
+                                        <a href="#" class="bordered-feature-image"><img src="images/people.png" alt="" /></a>
+										<h2>People</h2>
 										<p>
 											This is <strong>Halcyonic</strong>, a free site template
 											by <a href="http://twitter.com/ajlkn">AJ</a> for
@@ -81,8 +83,8 @@
 
 								<!-- Feature #2 -->
 									<section>
-										<a href="#" class="bordered-feature-image"><img src="images/pic02.jpg" alt="" /></a>
-										<h2>Responsive You Say?</h2>
+										<a href="#" class="bordered-feature-image"><img src="images/education.png" alt="" /></a>
+										<h2>Education</h2>
 										<p>
 											Yes! Halcyonic is built to be fully responsive so it looks great
 											at every screen size, from desktops to tablets to mobile phones.
@@ -94,8 +96,8 @@
 
 								<!-- Feature #3 -->
 									<section>
-										<a href="#" class="bordered-feature-image"><img src="images/pic03.jpg" alt="" /></a>
-										<h2>License Info</h2>
+										<a href="#" class="bordered-feature-image"><img src="images/research.png" alt="" /></a>
+										<h2>Research</h2>
 										<p>
 											Halcyonic is licensed under the <a href="http://html5up.net/license">CCA</a> license,
 											so use it for personal/commercial use as much as you like (just keep
@@ -108,8 +110,8 @@
 
 								<!-- Feature #4 -->
 									<section>
-										<a href="#" class="bordered-feature-image"><img src="images/pic04.jpg" alt="" /></a>
-										<h2>Volutpat etiam aliquam</h2>
+										<a href="#" class="bordered-feature-image"><img src="images/activity.png" alt="" /></a>
+										<h2>Activity</h2>
 										<p>
 											Duis neque nisi, dapibus sed mattis quis, rutrum accumsan sed. Suspendisse
 											eu varius nibh. Suspendisse vitae magna mollis.
@@ -131,13 +133,17 @@
 									<section>
 										<header>
 											<h2>Who We Are</h2>
-											<h3>A subheading about who we are</h3>
+											<h3>.. trying to know what seismograms tell</h3>
 										</header>
-										<a href="#" class="feature-image"><img src="images/pic05.jpg" alt="" /></a>
-										<p>
-											Duis neque nisi, dapibus sed mattis quis, rutrum accumsan magna sed.
-											Suspendisse eu varius nibh. Suspendisse vitae magna eget odio amet mollis
-											justo facilisis quis. Sed sagittis amet lorem ipsum.
+										<a href="#" class="feature-image"><img src="images/Jeju_photoed_Giback.png" alt="" /></a>
+                                        <p>
+                                        We study the sources of large and small earthquakes occurring at home and abroad, including the 2016 scale 5.8 Gyeongju earthquake and 2017 scale 5.4 Pohang earthquake. Using the seismic observation data obtained by directly operating a high-density broadband seismic observation network, the characteristics of the seismic sources associated with these earthquakes, such as the range and posture of the underground fault motion that caused the Gyeongju and Pohang earthquakes, could be revealed in great detail.
+                                        </p>
+                                        <p>
+                                        We welcome students interested in seismological research.
+                                        </p>
+                                        <p>
+                                        Thank you.
 										</p>
 									</section>
 
@@ -148,8 +154,15 @@
 									<section>
 										<header>
 											<h2>What We Do</h2>
-											<h3>A subheading about what we do</h3>
+											<h3>... trying to find and dig seismograms</h3>
 										</header>
+                                        <a href="#" class="feature-image"><img src="images/Jeju_photoed_Dabeen.png" alt="" /></a>
+                                        <p>
+                                        We are very interested in using seismic waves to reveal the crust and mantle structures of East Asia including Korea. Cross-correlation analysis of the background noise of continuous seismic records recorded from the seismic network of the southern Korean peninsula and the seismic network of neighboring China and Japan, and the seismic wave tomography method were applied to the detailed crust structure of the lower part of the Korean Peninsula and the seismic wave velocity structure of the crust and upper mantle of the lower part of East Asia. Was imaged.
+                                        </p>
+                                        <p>
+                                        Recently (October 2020), a joint study was initiated with the World Heritage Headquarters in Jeju Special Self-Governing Province and Seoul National University/Korea University to investigate the magma structure, which is the root of Jeju volcanic bodies. Five broadband seismometers have been installed on the summit of Hallasan Mountain and at a height of about 1,500 m around it, and geophones are being installed at about 70 locations with auxiliary observation networks. It is expected to be able to visualize the three-dimensional structure of the lower part of the volcanic body in Jeju Island by observing micro-earthquakes occurring in the lower part of Jeju Island and analyzing seismic waves from earthquakes occurring in a distance.
+                                        </p>
 										<ul class="check-list">
 											<li>Sed mattis quis rutrum accum</li>
 											<li>Eu varius nibh suspendisse lorem</li>
@@ -165,12 +178,16 @@
 								<!-- Box #3 -->
 									<section>
 										<header>
-											<h2>What People Are Saying</h2>
-											<h3>And a final subheading about our clients</h3>
+											<h2>Where We Go</h2>
+											<h3>... trying to get where seismograms are</h3>
 										</header>
+                                        <a href="#" class="feature-image"><img src="images/Hallasan_photoed_Dabeen.png" alt="" /></a>
+                                        <p>
+                                        Modern seismology is observational science. Pukyong National University's Seismology & Geophysics Laboratory is leading research to further investigate the characteristics of earthquake sources and the internal structure of the Earth through extensive and detailed earthquake observations. We operate high-performance seismic observation equipment and real-time and precise analysis computer servers, and conduct larger and more detailed research in cooperation with related seismology research groups at home and abroad. The ultimate goal of these studies is to create a society that is safe from earthquake disasters, starting with a fundamental search for natural phenomena.
+                                        </p>
 										<ul class="quote-list">
 											<li>
-												<img src="images/pic06.jpg" alt="" />
+												<img src="images/wherewego.HEIC" alt="" />
 												<p>"Neque nisidapibus mattis"</p>
 												<span>Jane Doe, CEO of UntitledCorp</span>
 											</li>
@@ -200,39 +217,33 @@
 
 								<!-- Links -->
 									<section>
-										<h2>Links to Important Stuff</h2>
+										<h2>Related Sites</h2>
 										<div>
 											<div class="row">
 												<div class="col-3 col-12-small">
 													<ul class="link-list last-child">
-														<li><a href="#">Neque amet dapibus</a></li>
-														<li><a href="#">Sed mattis quis rutrum</a></li>
-														<li><a href="#">Accumsan suspendisse</a></li>
-														<li><a href="#">Eu varius vitae magna</a></li>
+														<li><a href="http://cms.pknu.ac.kr/earth" target="_blank">Department of Earth and Environmental Sciences</a></li>
+                                                        <li><a href="https://cms.pknu.ac.kr/enma" target="_blank">College of Environmental and Marine Science and Technology</a></li>
 													</ul>
 												</div>
 												<div class="col-3 col-12-small">
 													<ul class="link-list last-child">
-														<li><a href="#">Neque amet dapibus</a></li>
-														<li><a href="#">Sed mattis quis rutrum</a></li>
-														<li><a href="#">Accumsan suspendisse</a></li>
-														<li><a href="#">Eu varius vitae magna</a></li>
+                                                        <li><a href="http://www.pknu.ac.kr" target="_blank">Pukyong National University</a></li>
+                                                        <li><a href="https://cms.pknu.ac.kr/bk21eehs" target="_blank">i-SEED School<br>BK21 FOUR Project</a></li>
 													</ul>
 												</div>
 												<div class="col-3 col-12-small">
 													<ul class="link-list last-child">
-														<li><a href="#">Neque amet dapibus</a></li>
-														<li><a href="#">Sed mattis quis rutrum</a></li>
-														<li><a href="#">Accumsan suspendisse</a></li>
-														<li><a href="#">Eu varius vitae magna</a></li>
+														<li><a href="https://www.weather.go.kr/w/eqk-vol/recent-eqk.do" target="_blank">Recent Earthquakes<br>Korea Meteorological Administration</a></li>
+														<li><a href="http://ds.iris.edu/seismon" target="_blank">Seismic Monitor, IRIS</a></li>
+														<li><a href="http://ds.iris.edu/ieb" target="_blank">Earthquake Browser, IRIS</a></li>
 													</ul>
 												</div>
 												<div class="col-3 col-12-small">
 													<ul class="link-list last-child">
-														<li><a href="#">Neque amet dapibus</a></li>
-														<li><a href="#">Sed mattis quis rutrum</a></li>
-														<li><a href="#">Accumsan suspendisse</a></li>
-														<li><a href="#">Eu varius vitae magna</a></li>
+														<li><a href="https://www.globalcmt.org" target="_blank">Global CMT</a></li>
+														<li><a href="http://www.isc.ac.uk" target="_blank">International Seismological Centre</a></li>
+														<li><a href="https://earthquake.usgs.gov/earthquakes/map/?extent=31.57854,116.19141&extent=44.21371,140.80078&range=search&format=dyfi&listOnlyShown=true&timeZone=utc&search=%7B%22name%22:%22Search%20Results%22,%22params%22:%7B%22starttime%22:%221900-01-01%2000:00:00%22,%22endtime%22:%229999-12-31%2023:59:59%22,%22maxlatitude%22:43,%22minlatitude%22:33,%22maxlongitude%22:134,%22minlongitude%22:123,%22minmagnitude%22:0,%22maxmagnitude%22:10,%22reviewstatus%22:%22reviewed%22,%22orderby%22:%22time%22,%22producttype%22:%22dyfi%22%7D%7D" target="_blank">Did You Feel It?</a></li>
 													</ul>
 												</div>
 											</div>
@@ -244,13 +255,17 @@
 
 								<!-- Blurb -->
 									<section>
-										<h2>An Informative Text Blurb</h2>
-										<p>
-											Duis neque nisi, dapibus sed mattis quis, rutrum accumsan sed. Suspendisse eu
-											varius nibh. Suspendisse vitae magna eget odio amet mollis. Duis neque nisi,
-											dapibus sed mattis quis, sed rutrum accumsan sed. Suspendisse eu varius nibh
-											lorem ipsum amet dolor sit amet lorem ipsum consequat gravida justo mollis.
-										</p>
+										<h2>Location</h2>
+                                        <ul class="link-list last-child">
+                                            <li>Seismology & Geophysics Laboratory<br>
+                                                Department of Earth and Environmental Sciences<br>
+                                                Pukyong National University<br>
+                                            </li>
+                                            <li><a href="http://naver.me/GLKQW2S5" target="_blank"><span style="color: #004d65;">Room #427, Environment & Ocean College Buiding (B14)<br>
+                                                Pukyong National University (Daeyeon Campus)<br>
+                                                45 Yongso-ro, Nam-gu, Busan 48513<br>
+                                                Republic of Korea</span></a></li>
+                                        </ul>
 									</section>
 
 							</div>
@@ -260,7 +275,7 @@
 
 			<!-- Copyright -->
 				<div id="copyright">
-					&copy; Untitled. All rights reserved. | Design: <a href="http://html5up.net">HTML5 UP</a>
+					&copy; 2021 Seismology and Geophysics Laboratory, Pukyong National University. All rights reserved. | Design: <a href="http://html5up.net">HTML5 UP</a>
 				</div>
 
 		</div>
