--- a/Publication.html
+++ b/Publication.html
@@ -88,7 +88,7 @@
 											<h3>that <span style="color: #004d65;">geophysics@pknu</span> contributes to</h3>
 										</header>
                                         <ul class="link-list last-child">
-                                            <li class="publication">Choi, S.-W., Rhie, J., Lee, S.-H., Kang, T.-S. (2020). A study on development of an earthquake ground-motion database based on the Korean National Seismic Network. Journal of the Earthquake Engineering Society of Korea, 24(6), 277-283. <a href="https://doi.org/10.5000/EESK.2020.24.6.277">doi.org/10.5000/EESK.2020.24.6.277</a> (in Korean with English abstract)</li>
+                                            <li class="publication">Choi, S.-W., Rhie, J., Lee, S.-H., Kang, T.-S. (2020). A study on development of an earthquake ground-motion database based on the Korean National Seismic Network. Journal of the Earthquake Engineering Society of Korea, 24(6), 277-283. <a href="https://doi.org/10.5000/EESK.2020.24.6.277">doi:10.5000/EESK.2020.24.6.277</a> (in Korean with English abstract)</li>
                                         </ul>
                                         <ul class="link-list last-child">
                                             <li class="publication">Chai, G., Yoo, S.-H., Rhie, J., Kang, T.-S. (2020). Stress drop scaling of the 2016 Gyeongju and 2017 Pohang earthquake sequences using coda-based methods. Bulletin of the Seismological Society of America, 110(5), 2047-2057. <a href="https://doi.org/10.1785/0120200132">doi:10.1785/0120200132</a></li>
@@ -109,7 +109,7 @@
                                             <li class="publication">Lee, H., Kang, T.-S. (2019). Seismic activity in the southwestern region of the Pyeongnam Basin of the Korean Peninsula. Journal of the Geological Society of Korea, 55(4), 415-429. <a href="http://dx.doi.org/10.14770/jgsk.2019.55.4.415">doi:10.14770/jgsk.2019.55.4.415</a> (in Korean with English abstract)</li>
                                         </ul>
                                         <ul class="link-list last-child">
-                                            <li class="publication">Lee, K.-K., Ellsworth, W. L., Giardini, D., Townend, J., Ge, Shemin, Shimamoto, T., Yeo, I.-W., Kang, T.-S., Rhie, J., Sheen, D.-H., Chang, C., Woo, J.-U., Langenbruch, C. (2019). Managing injection-induced seismic risks. Science, 364(6442), 730-732. <a href="https://doi.org/10.1126/science.aax1878">doi:10.1126/science.aax1878</a></li>
+                                            <li class="publication">Lee, K.-K., Ellsworth, W. L., Giardini, D., Townend, J., Ge, S., Shimamoto, T., Yeo, I.-W., Kang, T.-S., Rhie, J., Sheen, D.-H., Chang, C., Woo, J.-U., Langenbruch, C. (2019). Managing injection-induced seismic risks. Science, 364(6442), 730-732. <a href="https://doi.org/10.1126/science.aax1878">doi:10.1126/science.aax1878</a></li>
                                         </ul>
                                         <ul class="link-list last-child">
                                             <li class="publication">Woo, J.-U., Rhie, J., Kim, S., Kang, T.-S., Kim, K.-H., Kim, Y. (2019). The 2016 Gyeongju earthquake sequence revisited: aftershock interactions within a complex fault system. Geophysical Journal International, 217(1), 58-74. <a href="https://doi.org/10.1093/gji/ggz009">doi:10.1093/gji/ggz009</a></li>
@@ -283,76 +283,83 @@
 					</div>
 				</section>
 
-			<!-- Footer -->
-				<section id="footer">
-					<div class="container">
-						<div class="row">
-							<div class="col-8 col-12-medium">
+                <!-- Footer -->
+                    <section id="footer">
+                        <div class="container">
+                            <div class="row">
+                                <div class="col-8 col-12-medium">
 
-								<!-- Links -->
-									<section>
-										<h2>Links to Important Stuff</h2>
-										<div>
-											<div class="row">
-												<div class="col-3 col-12-small">
-													<ul class="link-list last-child">
-                                                        <li><a href="https://necis.kma.go.kr/">National Earthquake Comprehensive Information System (NECIS), KMA</a></li>
-													</ul>
-												</div>
-												<div class="col-3 col-12-small">
-													<ul class="link-list last-child">
-                                                        <li><a href="https://www.kigam.re.kr/quake/">Earthquake Research Center, KIGAM</a></li>
-													</ul>
-												</div>
-												<div class="col-3 col-12-small">
-													<ul class="link-list last-child">
-														<li><a href="https://www.iris.edu/">Incorporated Research Institutions for Seismology (IRIS)</a></li>
-														<li><a href="https://www.usgs.gov/natural-hazards/earthquake-hazards/">Earthquake Hazards, USGS</a></li>
-														<li><a href="https://www.fnet.bosai.go.jp/top.php?LANG=en">F-net, NIED</a></li>
-													</ul>
-												</div>
-												<div class="col-3 col-12-small">
-													<ul class="link-list last-child">
-														<li><a href="http://www.geoinfo.or.kr/">국토지반정보 포털시스템</a></li>
-														<li><a href="http://surveycp.seoul.go.kr/">Geotechnical Information DB System, Seoul Metropolitan City</a></li>
-													</ul>
-												</div>
-											</div>
-										</div>
-									</section>
+                                    <!-- Links -->
+                                        <section>
+                                            <h2>Related Sites</h2>
+                                            <div>
+                                                <div class="row">
+                                                    <div class="col-3 col-12-small">
+                                                        <ul class="link-list last-child">
+                                                            <li><a href="http://cms.pknu.ac.kr/earth" target="_blank">Department of Earth and Environmental Sciences</a></li>
+                                                            <li><a href="https://cms.pknu.ac.kr/enma" target="_blank">College of Environmental and Marine Science and Technology</a></li>
+                                                        </ul>
+                                                    </div>
+                                                    <div class="col-3 col-12-small">
+                                                        <ul class="link-list last-child">
+                                                            <li><a href="http://www.pknu.ac.kr" target="_blank">Pukyong National University</a></li>
+                                                            <li><a href="https://cms.pknu.ac.kr/bk21eehs" target="_blank">i-SEED School<br>BK21 FOUR Project</a></li>
+                                                        </ul>
+                                                    </div>
+                                                    <div class="col-3 col-12-small">
+                                                        <ul class="link-list last-child">
+                                                            <li><a href="https://www.weather.go.kr/w/eqk-vol/recent-eqk.do" target="_blank">Recent Earthquakes<br>Korea Meteorological Administration</a></li>
+                                                            <li><a href="http://ds.iris.edu/seismon" target="_blank">Seismic Monitor, IRIS</a></li>
+                                                            <li><a href="http://ds.iris.edu/ieb" target="_blank">Earthquake Browser, IRIS</a></li>
+                                                        </ul>
+                                                    </div>
+                                                    <div class="col-3 col-12-small">
+                                                        <ul class="link-list last-child">
+                                                            <li><a href="https://www.globalcmt.org" target="_blank">Global CMT</a></li>
+                                                            <li><a href="http://www.isc.ac.uk" target="_blank">International Seismological Centre</a></li>
+                                                            <li><a href="https://earthquake.usgs.gov/earthquakes/map/?extent=31.57854,116.19141&extent=44.21371,140.80078&range=search&format=dyfi&listOnlyShown=true&timeZone=utc&search=%7B%22name%22:%22Search%20Results%22,%22params%22:%7B%22starttime%22:%221900-01-01%2000:00:00%22,%22endtime%22:%229999-12-31%2023:59:59%22,%22maxlatitude%22:43,%22minlatitude%22:33,%22maxlongitude%22:134,%22minlongitude%22:123,%22minmagnitude%22:0,%22maxmagnitude%22:10,%22reviewstatus%22:%22reviewed%22,%22orderby%22:%22time%22,%22producttype%22:%22dyfi%22%7D%7D" target="_blank">Did You Feel It?</a></li>
+                                                        </ul>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </section>
 
-							</div>
-							<div class="col-4 col-12-medium imp-medium">
+                                </div>
+                                <div class="col-4 col-12-medium imp-medium">
 
-								<!-- Blurb -->
-									<section>
-										<h2>An Informative Text Blurb</h2>
-										<p>
-											Duis neque nisi, dapibus sed mattis quis, rutrum accumsan sed. Suspendisse eu
-											varius nibh. Suspendisse vitae magna eget odio amet mollis. Duis neque nisi,
-											dapibus sed mattis quis, sed rutrum accumsan sed. Suspendisse eu varius nibh
-											lorem ipsum amet dolor sit amet lorem ipsum consequat gravida justo mollis.
-										</p>
-									</section>
+                                    <!-- Blurb -->
+                                        <section>
+                                            <h2>Location</h2>
+                                            <ul class="link-list last-child">
+                                                <li>Seismology & Geophysics Laboratory<br>
+                                                    Department of Earth and Environmental Sciences<br>
+                                                    Pukyong National University<br>
+                                                </li>
+                                                <li><a href="http://naver.me/GLKQW2S5" target="_blank"><span style="color: #004d65;">Room #427, Environment & Ocean College Buiding (B14)<br>
+                                                    Pukyong National University (Daeyeon Campus)<br>
+                                                    45 Yongso-ro, Nam-gu, Busan 48513<br>
+                                                    Republic of Korea</span></a></li>
+                                            </ul>
+                                        </section>
 
-							</div>
-						</div>
-					</div>
-				</section>
+                                </div>
+                            </div>
+                        </div>
+                    </section>
 
-			<!-- Copyright -->
-				<div id="copyright">
-					&copy; Untitled. All rights reserved. | Design: <a href="http://html5up.net">HTML5 UP</a>
-				</div>
+                <!-- Copyright -->
+                    <div id="copyright">
+                        &copy; 2021 Seismology and Geophysics Laboratory, Pukyong National University. All rights reserved. | Design: <a href="http://html5up.net">HTML5 UP</a>
+                    </div>
 
-		</div>
+            </div>
 
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+            <!-- Scripts -->
+                <script src="assets/js/jquery.min.js"></script>
+                <script src="assets/js/browser.min.js"></script>
+                <script src="assets/js/breakpoints.min.js"></script>
+                <script src="assets/js/util.js"></script>
+                <script src="assets/js/main.js"></script>
 
-	</body>
-</html>
+        </body>
+    </html>
