Commit to changes in order of contents

--- a/Education.html
+++ b/Education.html
@@ -93,7 +93,7 @@
 									</section>
 
 							</div>
-							<div class="col-3 col-12-medium">
+							<div class="col-3 col-12-medium imp-medium">
 
 								<!-- Sidebar -->
 									<section>
