--- a/People.html
+++ b/People.html
@@ -97,7 +97,7 @@
                                         </ul>
                                     </section>
                             </div>
-                            <div class="col-6" style="margin: -20px 0 0px 0;">
+                            <div class="col-6 col-12-medium" style="margin: -20px 0 0px 0;">
                                     <section style="padding: 20px 10px 20px 30px; margin: 0 0 25px 0;">
                                         <ul class="people-list">
                                             <li>
@@ -110,7 +110,7 @@
                                         </ul>
                                     </section>
                             </div>
-                            <div class="col-6" style="margin: -20px 0 0px 0;">
+                            <div class="col-6 col-12-medium" style="margin: -20px 0 0px 0;">
                                     <section style="padding: 20px 10px 20px 30px; margin: 0 0 25px 0;">
                                         <ul class="people-list">
                                             <li>
@@ -135,7 +135,7 @@
                                         </header>
                                     </section>
                             </div>
-                            <div class="col-6" style="margin: -20px 0 0px 0;">
+                            <div class="col-6 col-12-medium" style="margin: -20px 0 0px 0;">
                                     <section style="padding: 20px 10px 20px 30px; margin: 0 0 25px 0;">
                                         <ul class="people-list">
                                             <li>
@@ -148,7 +148,7 @@
                                         </ul>
                                     </section>
                             </div>
-                            <div class="col-6" style="margin: -20px 0 0px 0;">
+                            <div class="col-6 col-12-medium" style="margin: -20px 0 0px 0;">
                                     <section style="padding: 20px 10px 20px 30px; margin: 0 0 25px 0;">
                                         <ul class="people-list">
                                             <li>
@@ -161,7 +161,7 @@
                                         </ul>
                                     </section>
                             </div>
-                            <div class="col-6" style="margin: -20px 0 0px 0;">
+                            <div class="col-6 col-12-medium" style="margin: -20px 0 0px 0;">
                                     <section style="padding: 20px 10px 20px 30px; margin: 0 0 25px 0;">
                                         <ul class="people-list">
                                             <li>
@@ -174,7 +174,7 @@
                                         </ul>
                                     </section>
                             </div>
-                            <div class="col-6" style="margin: -20px 0 0px 0;">
+                            <div class="col-6 col-12-medium" style="margin: -20px 0 0px 0;">
                                     <section style="padding: 20px 10px 20px 30px; margin: 0 0 25px 0;">
                                         <ul class="people-list">
                                             <li>
@@ -187,7 +187,7 @@
                                         </ul>
                                     </section>
                             </div>
-                            <div class="col-6" style="margin: -20px 0 0px 0;">
+                            <div class="col-6 col-12-medium" style="margin: -20px 0 0px 0;">
                                     <section style="padding: 20px 10px 20px 30px; margin: 0 0 25px 0;">
                                         <ul class="people-list">
                                             <li>
@@ -200,7 +200,7 @@
                                         </ul>
                                     </section>
                             </div>
-                            <div class="col-6" style="margin: -20px 0 0px 0;">
+                            <div class="col-6 col-12-medium" style="margin: -20px 0 0px 0;">
                                     <section style="padding: 20px 10px 20px 30px; margin: 0 0 25px 0;">
                                         <ul class="people-list">
                                             <li>
@@ -213,7 +213,7 @@
                                         </ul>
                                     </section>
                             </div>
-                            <div class="col-6" style="margin: -20px 0 0px 0;">
+                            <div class="col-6 col-12-medium" style="margin: -20px 0 0px 0;">
                                     <section style="padding: 20px 10px 20px 30px; margin: 0 0 25px 0;">
                                         <ul class="people-list">
                                             <li>
@@ -226,7 +226,7 @@
                                         </ul>
                                     </section>
                             </div>
-                            <div class="col-6" style="margin: -20px 0 0px 0;">
+                            <div class="col-6 col-12-medium" style="margin: -20px 0 0px 0;">
                                     <section style="padding: 20px 10px 20px 30px; margin: 0 0 25px 0;">
                                         <ul class="people-list">
                                             <li>
@@ -239,7 +239,7 @@
                                         </ul>
                                     </section>
                             </div>
-                            <div class="col-6" style="margin: -20px 0 0px 0;">
+                            <div class="col-6 col-12-medium" style="margin: -20px 0 0px 0;">
                                     <section style="padding: 20px 10px 20px 30px; margin: 0 0 25px 0;">
                                         <ul class="people-list">
                                             <li>
@@ -252,7 +252,7 @@
                                         </ul>
                                     </section>
                             </div>
-                            <div class="col-6" style="margin: -20px 0 0px 0;">
+                            <div class="col-6 col-12-medium" style="margin: -20px 0 0px 0;">
                                     <section style="padding: 20px 10px 20px 30px; margin: 0 0 25px 0;">
                                         <ul class="people-list">
                                             <li>
@@ -277,7 +277,7 @@
                                         </header>
                                     </section>
                             </div>
-                            <div class="col-6" style="margin: -20px 0 0px 0;">
+                            <div class="col-6 col-12-medium" style="margin: -20px 0 0px 0;">
                                     <section style="padding: 20px 10px 20px 30px; margin: 0 0 25px 0;">
                                         <ul class="people-list">
                                             <li>
@@ -291,7 +291,7 @@
                                         </ul>
                                     </section>
                             </div>
-                            <div class="col-6" style="margin: -20px 0 0px 0;">
+                            <div class="col-6 col-12-medium" style="margin: -20px 0 0px 0;">
                                     <section style="padding: 20px 10px 20px 30px; margin: 0 0 25px 0;">
                                         <ul class="people-list">
                                             <li>
@@ -304,7 +304,7 @@
                                         </ul>
                                     </section>
                             </div>
-                            <div class="col-6" style="margin: -20px 0 0px 0;">
+                            <div class="col-6 col-12-medium" style="margin: -20px 0 0px 0;">
                                     <section style="padding: 20px 10px 20px 30px; margin: 0 0 25px 0;">
                                         <ul class="people-list">
                                             <li>
@@ -318,7 +318,7 @@
                                         </ul>
                                     </section>
                             </div>
-                            <div class="col-6" style="margin: -20px 0 0px 0;">
+                            <div class="col-6 col-12-medium" style="margin: -20px 0 0px 0;">
                                     <section style="padding: 20px 10px 20px 30px; margin: 0 0 25px 0;">
                                         <ul class="people-list">
                                             <li>
@@ -332,7 +332,7 @@
                                         </ul>
                                     </section>
                             </div>
-                            <div class="col-6" style="margin: -20px 0 0px 0;">
+                            <div class="col-6 col-12-medium" style="margin: -20px 0 0px 0;">
                                     <section style="padding: 20px 10px 20px 30px; margin: 0 0 25px 0;">
                                         <ul class="people-list">
                                             <li>
@@ -344,7 +344,7 @@
                                         </ul>
                                     </section>
                             </div>
-                            <div class="col-6" style="margin: -20px 0 0px 0;">
+                            <div class="col-6 col-12-medium" style="margin: -20px 0 0px 0;">
                                     <section style="padding: 20px 10px 20px 30px; margin: 0 0 25px 0;">
                                         <ul class="people-list">
                                             <li>
@@ -356,7 +356,7 @@
                                         </ul>
                                     </section>
                             </div>
-                            <div class="col-6" style="margin: -20px 0 0px 0;">
+                            <div class="col-6 col-12-medium" style="margin: -20px 0 0px 0;">
                                     <section style="padding: 20px 10px 20px 30px; margin: 0 0 25px 0;">
                                         <ul class="people-list">
                                             <li>
@@ -368,7 +368,7 @@
                                         </ul>
                                     </section>
                             </div>
-                            <div class="col-6" style="margin: -20px 0 0px 0;">
+                            <div class="col-6 col-12-medium" style="margin: -20px 0 0px 0;">
                                     <section style="padding: 20px 10px 20px 30px; margin: 0 0 25px 0;">
                                         <ul class="people-list">
                                             <li>
@@ -380,7 +380,7 @@
                                         </ul>
                                     </section>
                             </div>
-                            <div class="col-6" style="margin: -20px 0 0px 0;">
+                            <div class="col-6 col-12-medium" style="margin: -20px 0 0px 0;">
                                     <section style="padding: 20px 10px 20px 30px; margin: 0 0 25px 0;">
                                         <ul class="people-list">
                                             <li>
@@ -392,7 +392,7 @@
                                         </ul>
                                     </section>
                             </div>
-                            <div class="col-6" style="margin: -20px 0 0px 0;">
+                            <div class="col-6 col-12-medium" style="margin: -20px 0 0px 0;">
                                     <section style="padding: 20px 10px 20px 30px; margin: 0 0 25px 0;">
                                         <ul class="people-list">
                                             <li>
@@ -404,7 +404,7 @@
                                         </ul>
                                     </section>
                             </div>
-                            <div class="col-6" style="margin: -20px 0 0px 0;">
+                            <div class="col-6 col-12-medium" style="margin: -20px 0 0px 0;">
                                     <section style="padding: 20px 10px 20px 30px; margin: 0 0 25px 0;">
                                         <ul class="people-list">
                                             <li>
@@ -416,7 +416,7 @@
                                         </ul>
                                     </section>
                             </div>
-                            <div class="col-6" style="margin: -20px 0 0px 0;">
+                            <div class="col-6 col-12-medium" style="margin: -20px 0 0px 0;">
                                     <section style="padding: 20px 10px 20px 30px; margin: 0 0 25px 0;">
                                         <ul class="people-list">
                                             <li>
@@ -428,7 +428,7 @@
                                         </ul>
                                     </section>
                             </div>
-                            <div class="col-6" style="margin: -20px 0 0px 0;">
+                            <div class="col-6 col-12-medium" style="margin: -20px 0 0px 0;">
                                     <section style="padding: 20px 10px 20px 30px; margin: 0 0 25px 0;">
                                         <ul class="people-list">
                                             <li>
@@ -440,7 +440,7 @@
                                         </ul>
                                     </section>
                             </div>
-                            <div class="col-6" style="margin: -20px 0 0px 0;">
+                            <div class="col-6 col-12-medium" style="margin: -20px 0 0px 0;">
                                     <section style="padding: 20px 10px 20px 30px; margin: 0 0 25px 0;">
                                         <ul class="people-list">
                                             <li>
@@ -453,7 +453,7 @@
                                         </ul>
                                     </section>
                             </div>
-                            <div class="col-6" style="margin: -20px 0 0px 0;">
+                            <div class="col-6 col-12-medium" style="margin: -20px 0 0px 0;">
                                     <section style="padding: 20px 10px 20px 30px; margin: 0 0 25px 0;">
                                         <ul class="people-list">
                                             <li>
