Update to trivial changes

--- a/Publication.html
+++ b/Publication.html
@@ -10,9 +10,9 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
-        <style type="text/css">
+        <!--<style type="text/css">
           li.publication {margin: 0.0px 0.0px 6.0px 40.0px; text-indent: -40.0px;}
-        </style>
+        </style>-->
 	</head>
 	<body class="subpage">
 		<div id="page-wrapper">
