--- a/topics.html
+++ b/topics.html
@@ -46,9 +46,18 @@
 								<!-- Main Content -->
 									<section>
 										<header>
-											<h2>Education</h2>
-											<h3>that <span style="color: #004d65;">geophysics@pknu</span> is giving</h3>
+											<h2>Topics in Geophysics</h2>
+											<h3>... examples of papers that <span style="color: #004d65;">geophysics@pknu</span> is concerned with</h3>
 										</header>
+                                        <ul class="link-list last-child">
+                                            <h3>Rupture directivity / finite-fault inversion</h3>
+                                            <li class="publication">López-Comino, J. A., Stich, D., Morales, J., Ferreira, A. M. G.  (2016). Resolution of rupture directivity in weak events: 1-D versus 2-D source parameterizations for the 2011, Mw 4.6 and 5.2 Lorca earthquakes, Spain. <i>Journal of Geophysical Research: Solid Earth</i>, <b>121</b>(9), 6608–6626. <a href="https://agupubs.onlinelibrary.wiley.com/doi/epdf/10.1002/2016JB013227">doi:10.1002/2016JB013227</a>
+                                            </li>
+                                            <li><a href="#">paper2</a></li>
+                                            <li><a href="#">paper3</a></li>
+                                            <li><a href="#">paper4</a></li>
+                                            <li><a href="#">paper5</a></li>
+                                        </ul>
 										<p>
 											Do what you want, not your surroundings does. 
 										</p>
