Commit to update

--- a/Links.html
+++ b/Links.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Research of geophysics@pknu</title>
+		<title>Education of geophysics@pknu</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -41,33 +41,60 @@
 				<section id="content">
 					<div class="container">
 						<div class="row">
+							<div class="col-9 col-12-medium">
+
+								<!-- Main Content -->
+									<section>
+										<header>
+											<h2><a href="Education.html">Education</a> - <a href="Classes.html">Classes</a> - Useful Lectures</h2>
+											<h3>... other lectures that <span style="color: #004d65;">geophysics@pknu</span> is concerned with</h3>
+										</header>
+                                        <ul class="link-list last-child">
+                                            <h3>Society</h3>
+                                            <li>대한지질학회<a href="http://web.gps.caltech.edu/classes/ge11d/" target="_blank">Introduction to Geophysics</a>, Winter 2014; <a href="http://web.gps.caltech.edu/classes/ge11d/doc/" target="_blank">Notes</a>
+                                            </li>
+                                        </ul>
+                                        <br>
+                                        <ul class="link-list last-child">
+                                            <h3>Journal</h3>
+                                            <li>Geosciences Journal<a href="http://web.gps.caltech.edu/classes/ge11d/" target="_blank">Introduction to Geophysics</a>, Winter 2014; <a href="http://web.gps.caltech.edu/classes/ge11d/doc/" target="_blank">Notes</a>
+                                            </li>
+                                        </ul>
+                                        <br>
+                                        <ul class="link-list last-child">
+                                            <h3>교재</h3>
+                                            <li>교보문고 <a href="http://pod.kyobobook.co.kr/" target="_blank">POD 교안제작(대학교재) 및 개인출판</a> 서비스 안내(저작권료 20% 제공)
+                                            </li>
+                                        </ul>
+                                        <br>
+                                        <ul class="link-list last-child">
+                                            <h3>기사</h3>
+                                            <li>서울경제: [서경이 만난 사람]이용훈 <a href="http://naver.me/5O5Js2P2" target="_blank">"전기전자 분야, 50년前 교재로 공부...커리큘럼 혁신해 확실히 차별화" </a>
+                                            </li>
+                                        </ul>
+                                        <br>
+									</section>
+
+							</div>
 							<div class="col-3 col-12-medium imp-medium">
 
 								<!-- Sidebar -->
-                                    <section>
-                                        <header>
-                                            <h2>Research Fields</h2>
-                                        </header>
-                                        <ul class="link-list">
-                                            <li><a href="#">Crust/mantle structure</a></li>
-                                            <li><a href="#">Seismicity</a></li>
-                                            <li><a href="#">Earthquake source parameters</a></li>
-                                            <li><a href="#">Strong ground motions</a></li>
-                                            <li><a href="#">Seismic hazard</a></li>
-                                        </ul>
-                                    </section>
-                                    <section>
-                                        <header>
-                                            <h2>Publication</h2>
-                                        </header>
-                                        <ul class="link-list">
-                                            <li><a href="Article.html">Article</a></li>
-                                            <li><a href="#">Book</a></li>
-                                            <li><a href="#">Report</a></li>
-                                            <li><a href="#">Abstract</a></li>
-                                            <li><a href="#">Media</a></li>
-                                        </ul>
-                                    </section>
+									<section>
+										<header>
+											<h2>Classes</h2>
+										</header>
+										<ul class="link-list">
+											<li><a href="#">Computational Thinking</a></li>
+											<li><a href="#">Geophysics and Lab.</a></li>
+											<li><a href="#">Geophysical Exploration and Lab.</a></li>
+											<li><a href="#">Seismology</a></li>
+											<li><a href="#">Machine Learning Earth Environmental Data Analysis</a></li>
+											<li><a href="#">Theoretical Seismology</a></li>
+                                            <li><a href="#">Observational Geophysics</a></li>
+                                            <li><a href="#">Geophysical Inverse Theory</a></li>
+                                            <li><a href="topics.html">Topics in Geophysics</a></li>
+										</ul>
+									</section>
 									<section>
 										<header>
 											<h2>Related News</h2>
@@ -82,63 +109,6 @@
 											<li><a href="#">Dis parturient montes</a></li>
 											<li><a href="#">Nascetur ridiculus</a></li>
 										</ul>
-									</section>
-
-							</div>
-							<div class="col-9 col-12-medium">
-
-								<!-- Main Content -->
-									<section>
-										<header>
-											<h2>Research</h2>
-											<h3>that <span style="color: #004d65;">geophysics@pknu</span> is conducting</h3>
-										</header>
-										<p>
-											Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam metus, congue
-											vel suscipit ut, dignissim non risus. Vestibulum ante est, fringilla nec placerat
-											eu, vestibulum vitae diam. Integer eget egestas eros. Duis enim erat, mollis quis
-											lacinia eget, blandit nec ipsum. Donec vitae turpis ipsum. Aliquam mauris libero,
-											sagittis in eleifend at, mattis imperdiet velit. Donec urna risus, rutrum molestie
-											varius ac, lacinia sit amet augue. Nam ultrices elementum eros.
-										</p>
-										<p>
-											Sed faucibus viverra ligula, non varius magna semper vitae. Donec eu justo ut ipsum
-											hendrerit congue nec eu risus. Cum sociis natoque penatibus et magnis dis parturient
-											montes, nascetur ridiculus mus. Lorem ipsum dolor sit amet, consectetur adipiscing
-											egestas tempus. Cras convallis odio sit amet risus convallis porttitor. Integer
-											vehicula fermentum ligula at pretium. Suspendisse semper iaculis eros, eu aliquam
-											justo imperdiet vel. Proin nec dictum mi. Duis commodo enim non tellus interdum
-											elit. Suspendisse fermentum adipiscing nisi, a tempor libero malesuada at. Morbi
-											lacinia dui adipiscing risus eleifend tincidunt. Proin eu mauris eu tellus eleifend
-											hendrerit.
-										</p>
-										<p>
-											Mauris sit amet tellus urna. In facilisis, tortor vitae ultricies egestas, odio
-											mi rhoncus arcu, quis euismod felis felis et velit. Mauris varius consectetur erat
-											egestas tempus. Cras convallis odio sit amet risus convallis porttitor. Integer
-											vehicula fermentum ligula at pretium. Suspendisse semper iaculis eros, eu aliquam
-											justo imperdiet vel. Proin nec dictum mi. Duis commodo enim non tellus interdum
-											iaculis. Phasellus ultrices diam sit amet orci lacinia sed consequat dui auctor.
-										</p>
-										<p>
-											Sed faucibus viverra ligula, non varius magna semper vitae. Donec eu justo ut ipsum
-											hendrerit congue nec eu risus. Cum sociis natoque penatibus et magnis dis parturient
-											montes, nascetur ridiculus mus. Lorem ipsum dolor sit amet, consectetur adipiscing
-											egestas tempus. Cras convallis odio sit amet risus convallis porttitor. Integer
-											vehicula fermentum ligula at pretium. Suspendisse semper iaculis eros, eu aliquam
-											justo imperdiet vel. Proin nec dictum mi. Duis commodo enim non tellus interdum
-											elit. Suspendisse fermentum adipiscing nisi, a tempor libero malesuada at. Morbi
-											lacinia dui adipiscing risus eleifend tincidunt. Proin eu mauris eu tellus eleifend
-											hendrerit.
-										</p>
-										<p>
-											Mauris sit amet tellus urna. In facilisis, tortor vitae ultricies egestas, odio
-											mi rhoncus arcu, quis euismod felis felis et velit. Mauris varius consectetur erat
-											egestas tempus. Cras convallis odio sit amet risus convallis porttitor. Integer
-											vehicula fermentum ligula at pretium. Suspendisse semper iaculis eros, eu aliquam
-											justo imperdiet vel. Proin nec dictum mi. Duis commodo enim non tellus interdum
-											iaculis. Phasellus ultrices diam sit amet orci lacinia sed consequat dui auctor.
-										</p>
 									</section>
 
 							</div>
