--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
 									<!-- Banner Copy -->
 										<!--<p>Welcome to Seismology & Geophysics Lab</p>-->
 										<!--<a href="#" class="button-large">geophysics@pknu!</a>-->
-                                        <a href="#" class="button-large">Welcome to Seismology & Geophysics Lab</a>
-                                            <p>Welcome to the Seismology & Geophysics Laboratory at the <a href="http://cms.pknu.ac.kr/earth">Department of Earth and Environmental Sciences</a> of the <a href="http://www.pknu.ac.kr">Pukyong National University</a> (PKNU).</p>
+                                        <!-- <a href="#" class="button-large">Welcome to Seismology & Geophysics Lab</a> -->
+                                            <p style="line-height:2em;">Welcome to the Seismology & Geophysics Laboratory at<br> the Department of Earth & Environmental Sciences of<br> the Pukyong National University.</p>
 
 								</div>
 								<div class="col-6 col-12-medium imp-medium">
@@ -72,8 +72,8 @@
 										<h2>People</h2>
 										<p>
 											This is <strong>Halcyonic</strong>, a free site template
-											by <a href="http://twitter.com/ajlkn">AJ</a> for
-											<a href="http://html5up.net">HTML5 UP</a>. It's responsive,
+											by <a href="http://twitter.com/ajlkn" target="_blank">AJ</a> for
+											<a href="http://html5up.net" target="_blank">HTML5 UP</a>. It's responsive,
 											built on HTML5 + CSS3, and includes 5 unique page layouts.
 										</p>
 									</section>
@@ -99,7 +99,7 @@
 										<a href="#" class="bordered-feature-image"><img src="images/research.png" alt="" /></a>
 										<h2>Research</h2>
 										<p>
-											Halcyonic is licensed under the <a href="http://html5up.net/license">CCA</a> license,
+											Halcyonic is licensed under the <a href="http://html5up.net/license" target="_blank">CCA</a> license,
 											so use it for personal/commercial use as much as you like (just keep
 											our credits intact).
 										</p>
