Commit to KTS' cv

--- a/People.html
+++ b/People.html
@@ -68,7 +68,8 @@
                                                 <p style="line-height:2em; font-size:1.1em">Kang, Tae-Seob&nbsp&nbsp<q style="font-size:12px">Ph.D.</q></p>
                                                 <p>Professor of Geophysics</p>
                                                 <p>tskang(at)pknu.ac.kr<br>
-                                                Earthquake seismology, Seismic hazard</p>
+                                                Earthquake seismology, Seismic hazard<br>
+                                                <a href="KangTaeSeob_CV.html">[Resume]</a></p>
                                             </li>
                                         </ul>
 									</section>
