--- a/KangTaeSeob_CV.html
+++ b/KangTaeSeob_CV.html
@@ -46,14 +46,11 @@
                                     <section>
                                         <header>
                                             <h2>Kang, Tae-Seob&nbsp&nbsp<q style="font-size:17px">Ph.D.</q></h2>
-                                            <h3>Professor of Seismology and Geophysics, who is leading <span style="color: #004d65;">geophysics@pknu</span></h3>
-                                            <ul class="check-list">
-                                                <li><a href="https://scholar.google.com/citations?user=jScU9tMAAAAJ&hl=ko&oi=ao" target="_blank">Google Scholar</a>
-                                                </li>
-                                                <li><a href="https://orcid.org/0000-0002-0894-1468" target="_blank">ORCID</a>
-                                                </li>
-                                                <li><a href="https://publons.com/researcher/2503787/tae-seob-kang/" target="_blank">Publons -  Web of Science ResearcherID: J-1946-2014</a>
-                                                </li>
+                                            <h3>Professor of Seismology and Geophysics, who is leading <span style="color: #004d65;">geophysics@pknu</span></h3><br>
+                                                <p style="margin-bottom:-20px;">[<a href="https://scholar.google.com/citations?user=jScU9tMAAAAJ&hl=ko&oi=ao" target="_blank">Google</a> | 
+                                                <a href="https://orcid.org/0000-0002-0894-1468" target="_blank">ORCID</a> |
+                                                <a href="https://publons.com/researcher/2503787/tae-seob-kang" target="_blank">Publons</a> |
+                                                <a href="https://www.scopus.com/authid/detail.uri?authorId=14040579700" target="_blank">Scopus</a>]</p>
                                         </header>
                                     </section>
                             </div>
@@ -65,73 +62,65 @@
                                     <header>
                                         <h3>Education</h3>
                                     </header>
-                                    </section>
+                                </section>
                             </div>
                             <div class="col-12" style="margin: -20px 0 0px 0;">
-                                    <section style="padding: 20px 10px 20px 30px;">
-                                        <ul class="check-list">
-                                            <li>
-                                                <!--<img src="./images/people/silhouette.png" alt=""  width="80px" style="background-color:#EAFAF1"/>-->
-                                                <p>B.S., Department of Geological Sciences, Seoul National University, 1991</p>
-                                                <p>M.S., Department of Geological Sciences, Seoul National University, 1993</p>
-                                                <p>Ph.D., School of Earth and Environmental Sciences, Seoul National University, 2004</p>
-                                                <p style="text-indent: 30px;">Thesis title: Simulation of Simulation of Seismic Wave Propagation Using Locally Variable Time-step Finite-difference Method <a href="http://dcollection.snu.ac.kr/jsp/common/DcLoOrgPer.jsp?sItemId=000000053492">[view]</a></p>
-                                            </li>
-                                        </ul>
+                                    <section style="padding: 10px 10px 10px 30px;">
+                                        1991, B.S., Department of Geological Sciences, Seoul National University<br>
+                                        1993, M.S., Department of Geological Sciences, Seoul National University<br>
+                                        2004, Ph.D., School of Earth and Environmental Sciences, Seoul National University<br>
+                                        <p style="text-indent: 30px;">Thesis title: <a href="http://dcollection.snu.ac.kr/jsp/common/DcLoOrgPer.jsp?sItemId=000000053492" target="_blank">Simulation of Simulation of Seismic Wave Propagation Using Locally Variable Time-step Finite-difference Method</a></p>
 									</section>
 							</div>
                         </div>
-                        
+                        <br>
                         <div class="row">
                             <div class="col-12">
                                 <section style="padding: 10px 10px 10px 30px;">
                                     <header>
-                                        <h3>Working</h3>
+                                        <h3>Experience</h3>
                                     </header>
                                     </section>
                             </div>
                             <div class="col-12" style="margin: -20px 0 0px 0;">
-                                    <section style="padding: 20px 10px 20px 30px;">
-                                        <ul class="check-list">
-                                            <li>
-                                                <!--<img src="./images/people/silhouette.png" alt=""  width="80px" style="background-color:#EAFAF1"/>-->
-                                                <p>1993-1995, Sergeant, Military Service, Republic of Korea Army</p>
-                                                <p>1995-1998, Researcher, R&D Center, SK Engineering & Construction Company (SKEC)</p>
-                                                <p>2000-2001, Administrative Assistant, School of Earth and Environmental Sciences, Seoul National University</p>
-                                                <p>2004-2005, Senior Engineer, Division of Civil Engineering, KEPCO Engineering & Construction Company (KEPCO E&C)</p>
-                                                <p>2005-2009, Senior Researcher, Earthquake Research Center, Korea Institute of Geoscience and Mineral Resources (KIGAM)</p>
-                                                <p>2009-present, Professor, Department of Earth and Environmental Sciences, Pukyong National University</p>
-                                                <p>2014-2016/2018-2022, Head of Department, Department of Earth and Environmental Sciences, Pukyong National University</p>
-                                                <p>2014-2016/2018-2022, Director, Institute of Environtal Geosciences, Pukyong National University</p>
-                                            </li>
-                                        </ul>
+                                <section style="padding: 10px 10px 10px 30px;">
+                                        1993.05.-1995.04., Sergeant, Military Service, Republic of Korea Army<br>
+                                        1995.07.-1998.09., Researcher, R&D Center, SK Engineering & Construction Company (SKEC)<br>
+                                        2000.02.-2001.02., Administrative Assistant, School of Earth and Environmental Sciences, Seoul National University<br>
+                                        2004.08.-2005.09., Senior Engineer, Division of Civil Engineering, KEPCO Engineering & Construction Company (KEPCO E&C)<br>
+                                        2005.09.-2009.02., Senior Researcher, Earthquake Research Center, Korea Institute of Geoscience and Mineral Resources (KIGAM)<br>
+                                        2009.02.-present, Professor, Department of Earth and Environmental Sciences, Pukyong National University<br>
+                                        2014.07.-2016.02./2018.03.-2022.02., Head of Department, Department of Earth and Environmental Sciences, Pukyong National University<br>
+                                        2014.07.-2016.02./2018.03.-2022.02., Director, Institute of Environtal Geosciences, Pukyong National University
                                     </section>
                             </div>
                         </div>
-
+                        <br>
                         <div class="row">
                             <div class="col-12">
                                 <section style="padding: 10px 10px 10px 30px;">
                                     <header>
-                                        <h3>Social Activity</h3>
+                                        <h3>Activity</h3>
                                     </header>
-                                    </section>
+                                </section>
                             </div>
                             <div class="col-12" style="margin: -20px 0 0px 0;">
-                                    <section style="padding: 20px 10px 20px 30px;">
-                                        <ul class="check-list">
-                                            <li>
-                                                <!--<img src="./images/people/silhouette.png" alt=""  width="80px" style="background-color:#EAFAF1"/>-->
-                                                <p>2005-2020, Board Member, The Korea Society of Earth and Exploration Geophysicists</p>
-                                                <p>2020-2021, Board Member, The Geological Society of Korea</p>
-                                                <p>2011-present, Editor, Geosciences Journal</p>
-                                                <p>2020-2021, The Pohang Earthquake Investigation Committee, The Prime Minister</p>
-                                            </li>
-                                        </ul>
+                                <section style="padding: 10px 10px 10px 30px;">
+                                        2011-present, Editor, <a href="https://www.springer.com/journal/12303" target="_blank">Geosciences Journal</a><br>
+                                        2014-?, Advisory Board Member, Korea Meteorological Administration<br>
+                                        2011-2013, Board Member, The Earthquake Engineering Society of Korea<br>
+                                        2013-2020, Board Member, The Korea Society of Earth and Exploration Geophysicists<br>
+                                        2014-2015/2020-2021, Board Member, The Geological Society of Korea<br>
+                                        2020-2021, The Pohang Earthquake Investigation Committee, The Prime Minister
+                                        2003-present, Member, American Geophysical Union<br>
+                                        2003-present, Member, Seismological Society of America<br>
+                                        2003-present, Member, Asia Oceania Geosciences Society<br>
+                                        ?-present, Member, European Geosciences Union<br>
+                                        ?-present, Member, Japan Geosciences Union<br>
                                     </section>
                             </div>
                         </div>
-
+                        <br>
                         <div class="row">
                             <div class="col-12">
                                 <section style="padding: 10px 10px 10px 30px;">
@@ -141,16 +130,12 @@
                                     </section>
                             </div>
                             <div class="col-12" style="margin: -20px 0 0px 0;">
-                                    <section style="padding: 20px 10px 20px 30px;">
-                                                <p>2006, 한국지질자원연구원 신진연구자상</p>
-                                                <p>2005, 제15회 과학기술우수논문상</p>
-                                                <p>국무총리 표창</p>
-                                        <ul class="check-list">
-                                                <li>
-                                                <p>2018, Academic Award, The Korea Society of Earth and Exploration Geophysicists</p>
-                                                <p>2019, Academic Award, The Geological Society of Korea</p>
-                                                </li>
-                                        </ul>
+                                <section style="padding: 10px 10px 10px 30px;">
+                                        2005, Best Paper Award in Science and Technology, The Korean Federation of Science and Technology Societies<br>
+                                        2006, Young Fellowship Award, Korea Institute of Geoscience and Mineral Resources<br>
+                                        2016, Commendation of World Meteorological Day, The Prime Minister of the Korean Government<br>
+                                        2017, Academic Award, The Korea Society of Earth and Exploration Geophysicists<br>
+                                        2019, Academic Award, The Geological Society of Korea
                                     </section>
                             </div>
                         </div>
