Commit to tskang

--- a/People.html
+++ b/People.html
@@ -64,7 +64,7 @@
                                     <section style="padding: 20px 10px 20px 30px;">
                                         <ul class="people-list">
                                             <li>
-                                                <img src="./images/people/silhouette.png" alt=""  width="100px" style="background-color:#EAFAF1"/>
+                                                <img src="./images/people/tskang.png" alt=""  width="100px" style="background-color:#EAFAF1"/>
                                                 <p style="line-height:2em; font-size:1.1em">Kang, Tae-Seob&nbsp&nbsp<q style="font-size:12px">Ph.D.</q></p>
                                                 <p>Professor of Geophysics</p>
                                                 <p>tskang(at)pknu.ac.kr<br>
@@ -314,7 +314,7 @@
                                                 <p>Postdoctoral Researcher</p>
                                                 <p>Kangwon National University</p>
                                                 <p>Fulbright U.S. Student Award to Korea (2014-2015)</p>
-                                                <p>Ph.D., Northwestern University, 2016</p>
+                                                <p>Ph.D., Northwestern University, 2018</p>
                                             </li>
                                         </ul>
                                     </section>
@@ -323,7 +323,7 @@
                                     <section style="padding: 20px 10px 20px 30px; margin: 0 0 25px 0;">
                                         <ul class="people-list">
                                             <li>
-                                                <img src="./images/people/silhouette.png" alt=""  width="100px" style="background-color:#EAFAF1"/>
+                                                <img src="./images/people/seongjujeong.png" alt=""  width="100px" style="background-color:#EAFAF1"/>
                                                 <p style="line-height:2em; font-size:1.1em">Jeong, SeongJu&nbsp&nbsp</p>
                                                 <p>Postdoctoral Researcher</p>
                                                 <p>Southern Methodist University</p>
