--- a/KangTaeSeob_CV.html
+++ b/KangTaeSeob_CV.html
@@ -78,7 +78,7 @@
                             <div class="col-12">
                                 <section style="padding: 10px 10px 10px 30px;">
                                     <header>
-                                        <h3>Experience</h3>
+                                        <h3>Employment</h3>
                                     </header>
                                     </section>
                             </div>
@@ -90,8 +90,6 @@
                                         2004.08.-2005.09., Senior Engineer, Division of Civil Engineering, KEPCO Engineering & Construction Company (KEPCO E&C)<br>
                                         2005.09.-2009.02., Senior Researcher, Earthquake Research Center, Korea Institute of Geoscience and Mineral Resources (KIGAM)<br>
                                         2009.02.-present, Professor, Department of Earth and Environmental Sciences, Pukyong National University<br>
-                                        2014.07.-2016.02./2018.03.-2022.02., Head of Department, Department of Earth and Environmental Sciences, Pukyong National University<br>
-                                        2014.07.-2016.02./2018.03.-2022.02., Director, Institute of Environtal Geosciences, Pukyong National University
                                     </section>
                             </div>
                         </div>
@@ -106,6 +104,8 @@
                             </div>
                             <div class="col-12" style="margin: -20px 0 0px 0;">
                                 <section style="padding: 10px 10px 10px 30px;">
+                                        2014.07.-2016.02./2018.03.-2022.02., Head of Department, Department of Earth and Environmental Sciences, Pukyong National University<br>
+                                        2014.07.-2016.02./2018.03.-2022.02., Director, Institute of Environtal Geosciences, Pukyong National University
                                         2011-present, Editor, <a href="https://www.springer.com/journal/12303" target="_blank">Geosciences Journal</a><br>
                                         2014-?, Advisory Board Member, Korea Meteorological Administration<br>
                                         2011-2013, Board Member, The Earthquake Engineering Society of Korea<br>
