--- a/People.html
+++ b/People.html
@@ -115,7 +115,7 @@
                                     <section style="padding: 20px 10px 20px 30px; margin: 0 0 25px 0;">
                                         <ul class="people-list">
                                             <li>
-                                                <img src="./images/people/silhouette.png" alt=""  width="100px" style="background-color:#EAFAF1"/>
+                                                <img src="./images/people/gyeongdonchai.png" alt=""  width="100px" style="background-color:#EAFAF1"/>
                                                 <p style="line-height:2em; font-size:1.1em">Chai, Gyeongdon&nbsp&nbsp<q style="font-size:12px">M.S.</q></p>
                                                 <p>Researcher</p>
                                                 <p>cgd1605(at)gmail.com<br>
@@ -244,7 +244,7 @@
                                     <section style="padding: 20px 10px 20px 30px; margin: 0 0 25px 0;">
                                         <ul class="people-list">
                                             <li>
-                                                <img src="./images/people/silhouette.png" alt=""  width="100px" style="background-color:#EAFAF1"/>
+                                                <img src="./images/people/junebaek.png" alt=""  width="100px" style="background-color:#EAFAF1"/>
                                                 <p style="line-height:2em; font-size:1.1em">Baek, June&nbsp&nbsp<q style="font-size:12px">B.S.</q></p>
                                                 <p>M.S. Student</p>
                                                 <p>6benero(at)gmail.com<br>
