--- a/Article.html
+++ b/Article.html
@@ -76,14 +76,10 @@
                                         <h2>Related News</h2>
                                     </header>
                                     <p>
-                                        Vehicula fermentum ligula at pretium. Suspendisse semper iaculis eros, eu aliquam
-                                        iaculis. Phasellus ultrices diam sit amet orci lacinia sed consequat.
+                                        TBA
                                     </p>
                                     <ul class="link-list">
-                                        <li><a href="#">Sed dolore viverra</a></li>
-                                        <li><a href="#">Ligula non varius</a></li>
-                                        <li><a href="#">Dis parturient montes</a></li>
-                                        <li><a href="#">Nascetur ridiculus</a></li>
+                                        <li><a href="#">TBA</a></li>
                                     </ul>
                                 </section>
 
