--- a/index.html
+++ b/index.html
@@ -68,13 +68,10 @@
 								<!-- Feature #1 -->
 									<section>
                                         <!-- <a href="#" class="bordered-feature-image"><img src="images/pic01.jpg" alt="" /></a> -->
-                                        <a href="#" class="bordered-feature-image"><img src="images/people.png" alt="" /></a>
+                                        <a href="People.html" class="bordered-feature-image"><img src="images/people.png" alt="" /></a>
 										<h2>People</h2>
 										<p>
-											This is <strong>Halcyonic</strong>, a free site template
-											by <a href="http://twitter.com/ajlkn" target="_blank">AJ</a> for
-											<a href="http://html5up.net" target="_blank">HTML5 UP</a>. It's responsive,
-											built on HTML5 + CSS3, and includes 5 unique page layouts.
+                                            who are studying at geophysics@pknu
 										</p>
 									</section>
 
@@ -83,11 +80,10 @@
 
 								<!-- Feature #2 -->
 									<section>
-										<a href="#" class="bordered-feature-image"><img src="images/education.png" alt="" /></a>
+										<a href="Education.html" class="bordered-feature-image"><img src="images/education.png" alt="" /></a>
 										<h2>Education</h2>
 										<p>
-											Yes! Halcyonic is built to be fully responsive so it looks great
-											at every screen size, from desktops to tablets to mobile phones.
+                                            that geophysics@pknu is giving
 										</p>
 									</section>
 
@@ -96,12 +92,10 @@
 
 								<!-- Feature #3 -->
 									<section>
-										<a href="#" class="bordered-feature-image"><img src="images/research.png" alt="" /></a>
+										<a href="Research.html" class="bordered-feature-image"><img src="images/research.png" alt="" /></a>
 										<h2>Research</h2>
 										<p>
-											Halcyonic is licensed under the <a href="http://html5up.net/license" target="_blank">CCA</a> license,
-											so use it for personal/commercial use as much as you like (just keep
-											our credits intact).
+                                            that geophysics@pknu is conducting
 										</p>
 									</section>
 
@@ -110,11 +104,10 @@
 
 								<!-- Feature #4 -->
 									<section>
-										<a href="#" class="bordered-feature-image"><img src="images/activity.png" alt="" /></a>
+										<a href="Activity.html" class="bordered-feature-image"><img src="images/activity.png" alt="" /></a>
 										<h2>Activity</h2>
 										<p>
-											Duis neque nisi, dapibus sed mattis quis, rutrum accumsan sed. Suspendisse
-											eu varius nibh. Suspendisse vitae magna mollis.
+                                            that geophysics@pknu is doing
 										</p>
 									</section>
 
@@ -137,14 +130,9 @@
 										</header>
 										<a href="#" class="feature-image"><img src="images/Jeju_photoed_Giback.png" alt="" /></a>
                                         <p>
-                                        We study the sources of large and small earthquakes occurring at home and abroad, including the 2016 scale 5.8 Gyeongju earthquake and 2017 scale 5.4 Pohang earthquake. Using the seismic observation data obtained by directly operating a high-density broadband seismic observation network, the characteristics of the seismic sources associated with these earthquakes, such as the range and posture of the underground fault motion that caused the Gyeongju and Pohang earthquakes, could be revealed in great detail.
+                                        We study the sources of large and small earthquakes occurring at home and abroad, including the 2016 M<sub>L</sub> 5.8 Gyeongju earthquake and 2017 M<sub>L</sub> 5.4 Pohang earthquake. Using the seismic observation data obtained by directly operating a high-density broadband seismic observation network, the characteristics of the seismic sources associated with these earthquakes, such as the range and posture of the underground fault motion that caused the Gyeongju and Pohang earthquakes, could be revealed in great detail.<br>
+                                        We welcome students interested in seismological research!
                                         </p>
-                                        <p>
-                                        We welcome students interested in seismological research.
-                                        </p>
-                                        <p>
-                                        Thank you.
-										</p>
 									</section>
 
 							</div>
@@ -158,18 +146,8 @@
 										</header>
                                         <a href="#" class="feature-image"><img src="images/Jeju_photoed_Dabeen.png" alt="" /></a>
                                         <p>
-                                        We are very interested in using seismic waves to reveal the crust and mantle structures of East Asia including Korea. Cross-correlation analysis of the background noise of continuous seismic records recorded from the seismic network of the southern Korean peninsula and the seismic network of neighboring China and Japan, and the seismic wave tomography method were applied to the detailed crust structure of the lower part of the Korean Peninsula and the seismic wave velocity structure of the crust and upper mantle of the lower part of East Asia. Was imaged.
+                                        We are very interested in using seismic waves to reveal the crust and mantle structures of East Asia including the Korean Peninsula, but not limited to the area. Cross-correlation analysis of the background noise of continuous seismic records recorded from the seismic network of the southern Korean Peninsula and the seismic network of neighboring China and Japan, and the seismic wave tomography method were applied to the detailed crust structure of the lower part of the Korean Peninsula and the seismic wave velocity structure of the crust and upper mantle of the lower part of East Asia was imaged.
                                         </p>
-                                        <p>
-                                        Recently (October 2020), a joint study was initiated with the World Heritage Headquarters in Jeju Special Self-Governing Province and Seoul National University/Korea University to investigate the magma structure, which is the root of Jeju volcanic bodies. Five broadband seismometers have been installed on the summit of Hallasan Mountain and at a height of about 1,500 m around it, and geophones are being installed at about 70 locations with auxiliary observation networks. It is expected to be able to visualize the three-dimensional structure of the lower part of the volcanic body in Jeju Island by observing micro-earthquakes occurring in the lower part of Jeju Island and analyzing seismic waves from earthquakes occurring in a distance.
-                                        </p>
-										<ul class="check-list">
-											<li>Sed mattis quis rutrum accum</li>
-											<li>Eu varius nibh suspendisse lorem</li>
-											<li>Magna eget odio amet mollis justo</li>
-											<li>Facilisis quis sagittis mauris</li>
-											<li>Amet tellus gravida lorem ipsum</li>
-										</ul>
 									</section>
 
 							</div>
@@ -183,25 +161,8 @@
 										</header>
                                         <a href="#" class="feature-image"><img src="images/Hallasan_photoed_Dabeen.png" alt="" /></a>
                                         <p>
-                                        Modern seismology is observational science. Pukyong National University's Seismology & Geophysics Laboratory is leading research to further investigate the characteristics of earthquake sources and the internal structure of the Earth through extensive and detailed earthquake observations. We operate high-performance seismic observation equipment and real-time and precise analysis computer servers, and conduct larger and more detailed research in cooperation with related seismology research groups at home and abroad. The ultimate goal of these studies is to create a society that is safe from earthquake disasters, starting with a fundamental search for natural phenomena.
+                                        Modern seismology is observational science. Our lab is leading research to further investigate the characteristics of earthquake sources and the internal structure of the Earth through extensive and detailed earthquake observations. We operate high-performance seismic observation equipment and real-time and precise analysis computer servers, and conduct larger and more detailed research in cooperation with related seismology research groups at home and abroad. The ultimate goal of these studies is to create a society that is safe from earthquake disasters, starting with a fundamental search for natural phenomena.
                                         </p>
-										<ul class="quote-list">
-											<li>
-												<img src="images/wherewego.HEIC" alt="" />
-												<p>"Neque nisidapibus mattis"</p>
-												<span>Jane Doe, CEO of UntitledCorp</span>
-											</li>
-											<li>
-												<img src="images/pic07.jpg" alt="" />
-												<p>"Lorem ipsum consequat!"</p>
-												<span>John Doe, President of FakeBiz</span>
-											</li>
-											<li>
-												<img src="images/pic08.jpg" alt="" />
-												<p>"Magna veroeros amet tempus"</p>
-												<span>Mary Smith, CFO of UntitledBiz</span>
-											</li>
-										</ul>
 									</section>
 
 							</div>
